--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
 <body>
 <header id="flex-header">
     <div class="cloud-header"></div>
-    <h1>Congratulations!</h1>
-    <h2>You are currently running a Python app built for the IBM Cloud.</h2>
+    <h1>Hello, world!</h1>
+    <h2>We have successfully deployed a Flask app on the IBM Cloud.</h2>
 </header>
 <main>
     <ul>
