--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <div class="cloud-header"></div>
     <h1>Hello, world!</h1>
     <h2>We have successfully deployed a Flask app on the IBM Cloud.</h2>
-    <h3>We have also conquered Git.</h3>
+    <h3>We have also conquered Git. Test...</h3>
 </header>
 <main>
     <ul>
